ambient-multi-network-demo/helloworld-global-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: helloworld-global
  namespace: sample
  labels:
    istio.io/use-waypoint: waypoint-helloworld
    app: helloworld
    service: helloworld-global
    istio.io/global: "true"
spec:
  ports:
  - port: 5000
    name: http
  selector:
    app: helloworld
